// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for gradle: branches enabled 1`] = `
<CodeSnippet
  snippet="sonarqube-check:
  image: gradle:jre11-slim
  variables:
    SONAR_USER_HOME: \\"\${CI_PROJECT_DIR}/.sonar\\"  # Defines the location of the analysis task cache
    GIT_DEPTH: \\"0\\"  # Tells git to fetch all the branches of the project, required by the analysis task
  cache:
    key: \\"\${CI_JOB_NAME}\\"
    paths:
      - .sonar/cache
  script: gradle sonarqube
  allow_failure: true
  only:
    - merge_requests
    - master
    - develop
"
/>
`;

exports[`should render correctly for gradle: branches not enabled 1`] = `
<CodeSnippet
  snippet="sonarqube-check:
  image: gradle:jre11-slim
  variables:
    SONAR_USER_HOME: \\"\${CI_PROJECT_DIR}/.sonar\\"  # Defines the location of the analysis task cache
    GIT_DEPTH: \\"0\\"  # Tells git to fetch all the branches of the project, required by the analysis task
  cache:
    key: \\"\${CI_JOB_NAME}\\"
    paths:
      - .sonar/cache
  script: gradle sonarqube
  allow_failure: true
  only:
    - merge_requests
    - master
    - develop
"
/>
`;

exports[`should render correctly for maven: branches enabled 1`] = `
<CodeSnippet
  snippet="sonarqube-check:
  image: maven:3.6.3-jdk-11
  variables:
    SONAR_USER_HOME: \\"\${CI_PROJECT_DIR}/.sonar\\"  # Defines the location of the analysis task cache
    GIT_DEPTH: \\"0\\"  # Tells git to fetch all the branches of the project, required by the analysis task
  cache:
    key: \\"\${CI_JOB_NAME}\\"
    paths:
      - .sonar/cache
  script: 
    - mvn verify sonar:sonar
  allow_failure: true
  only:
    - merge_requests
    - master
    - develop
"
/>
`;

exports[`should render correctly for maven: branches not enabled 1`] = `
<CodeSnippet
  snippet="sonarqube-check:
  image: maven:3.6.3-jdk-11
  variables:
    SONAR_USER_HOME: \\"\${CI_PROJECT_DIR}/.sonar\\"  # Defines the location of the analysis task cache
    GIT_DEPTH: \\"0\\"  # Tells git to fetch all the branches of the project, required by the analysis task
  cache:
    key: \\"\${CI_JOB_NAME}\\"
    paths:
      - .sonar/cache
  script: 
    - mvn verify sonar:sonar
  allow_failure: true
  only:
    - merge_requests
    - master
    - develop
"
/>
`;

exports[`should render correctly for other: branches enabled 1`] = `
<CodeSnippet
  snippet="sonarqube-check:
  image: 
    name: sonarsource/sonar-scanner-cli:latest
    entrypoint: [\\"\\"]
  variables:
    SONAR_USER_HOME: \\"\${CI_PROJECT_DIR}/.sonar\\"  # Defines the location of the analysis task cache
    GIT_DEPTH: \\"0\\"  # Tells git to fetch all the branches of the project, required by the analysis task
  cache:
    key: \\"\${CI_JOB_NAME}\\"
    paths:
      - .sonar/cache
  script: 
    - sonar-scanner
  allow_failure: true
  only:
    - merge_requests
    - master
    - develop
"
/>
`;

exports[`should render correctly for other: branches not enabled 1`] = `
<CodeSnippet
  snippet="sonarqube-check:
  image: 
    name: sonarsource/sonar-scanner-cli:latest
    entrypoint: [\\"\\"]
  variables:
    SONAR_USER_HOME: \\"\${CI_PROJECT_DIR}/.sonar\\"  # Defines the location of the analysis task cache
    GIT_DEPTH: \\"0\\"  # Tells git to fetch all the branches of the project, required by the analysis task
  cache:
    key: \\"\${CI_JOB_NAME}\\"
    paths:
      - .sonar/cache
  script: 
    - sonar-scanner
  allow_failure: true
  only:
    - merge_requests
    - master
    - develop
"
/>
`;
